[gd_scene load_steps=8 format=3 uid="uid://dx11sabgajww8"]

[ext_resource type="AudioStream" uid="uid://df1vx11au6byj" path="res://audios/back1.wav" id="1_81fu2"]
[ext_resource type="Script" uid="uid://c2ma4ol8ah8um" path="res://autoload/audio_player.gd" id="1_f1804"]
[ext_resource type="AudioStream" uid="uid://dn0113llrd5kb" path="res://audios/back.wav" id="3_nlbx0"]
[ext_resource type="AudioStream" uid="uid://cc3kpcoba56k2" path="res://audios/jump1.wav" id="4_j4ca1"]
[ext_resource type="AudioStream" uid="uid://1heeju235jus" path="res://audios/hit.wav" id="5_jqcyi"]
[ext_resource type="AudioStream" uid="uid://b16bdus8xssy6" path="res://audios/item.mp3" id="6_2ujlh"]
[ext_resource type="AudioStream" uid="uid://cayv5o7tucl58" path="res://audios/crack.mp3" id="7_2ujlh"]

[node name="AudioPlayer" type="Node2D"]
script = ExtResource("1_f1804")

[node name="WelcomAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_81fu2")

[node name="BackgroundAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_nlbx0")

[node name="JumpAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_j4ca1")

[node name="HitAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_jqcyi")

[node name="ItemAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_2ujlh")

[node name="CrackAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_2ujlh")

[connection signal="finished" from="WelcomAudio" to="." method="_on_welcom_audio_finished"]
[connection signal="finished" from="BackgroundAudio" to="." method="_on_background_audio_finished"]
